tests/snapshots/parity__golden_default_pipeline.snap
---
source: tests/parity.rs
expression: p.markdown
---
Intro

# Getting Started

Install with `npm i thing`.

| Flag | Meaning |
| ---- | ------- |
| -o   | output  |
