tests/snapshots/parity__golden_prune_pipeline.snap
---
source: tests/parity.rs
expression: "pipeline(&raw(DOCUSAURUS), &o).unwrap().markdown"
---
Install with `npm i thing`.

| Flag | Meaning |
| ---- | ------- |
| -o   | output  |
